[package]
name = "kanvas"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
# Change back to crates.io version when https://github.com/lawliet89/rocket_cors/pull/108 is published
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", rev = "54fae070"  }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
left-right = "0.11"
lazy_static = "1.4"
chrono = "0.4"
